[tool.poetry]
name = "eth-retry"
version = "0.3.5"
description = "Provides a decorator that automatically catches known transient exceptions that are common in the Ethereum/EVM ecosystem and reattempts to evaluate your decorated function"
authors = ["BobTheBuidler <bobthebuidlerdefi@gmail.com>"]
homepage = "https://github.com/BobTheBuidler/eth_retry"
repository = "https://github.com/BobTheBuidler/eth_retry"
documentation = "https://github.com/BobTheBuidler/eth_retry"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4"
typing_extensions = ">=4.0.1"

[tool.poetry.group.dev.dependencies]
eth-brownie = [
    {version = ">=1.16,<1.20", python = ">=3.8,<3.10"},
    {version = ">=1.20.3", python = ">=3.10,<4"}
]
joblib = "*"
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
