[tool.poetry]
name = "eth-retry"
version = "0.3.5"
description = "Provides a decorator that automatically catches known transient exceptions that are common in the Ethereum/EVM ecosystem and reattempts to evaluate your decorated function"
authors = ["BobTheBuidler <bobthebuidlerdefi@gmail.com>"]
homepage = "https://github.com/BobTheBuidler/eth_retry"
repository = "https://github.com/BobTheBuidler/eth_retry"
documentation = "https://github.com/BobTheBuidler/eth_retry"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4"
typing_extensions = ">=4.0.1"

[tool.poetry.group.dev.dependencies]
eth-brownie = "==1.21.0"
joblib = "*"
pytest = "==6.2.5"
pytest-codspeed = "2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.mypy]
files = ["."]
ignore_missing_imports = true
install_types = true
non_interactive = true
pretty = true
show_error_codes = true
show_error_context = true
strict = true

[tool.pytest.ini_options]
addopts = "-s -v"
testpaths = ["tests"]
